--- a/qr-generator.html
+++ b/qr-generator.html
@@ -643,6 +643,24 @@
             }
         }
     </style>
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "QR Code Generator",
+      "applicationCategory": "Utility",
+      "operatingSystem": "All",
+      "browserRequirements": "Requires JavaScript and CSS",
+      "url": "https://www.ntalekt.com/qr-generator.html",
+      "description": "Free online tool to create customizable QR codes for URLs, Wi-Fi, contact cards, SMS and more.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
 </head>
 <body>
     <div class="container">
